--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="index.css" rel="stylesheet" type="text/css">
         <script src="index.js"></script>
     </head>
-
+        <h>Hello world</h>
     <body>        
     </body>
 </html>
