Header code clean up

--- a/index.html
+++ b/index.html
@@ -11,38 +11,39 @@
         <link href="index.css" rel="stylesheet" type="text/css">
         <script src="index.js"></script>
     </head>
-    <header class="container">
+
+    <body>
+        <header class="container">
             <div class="header-top">
                 <form class="search">
-                    <input type="text" placeholder="Search and hit enter">
-                    <button type="reset"><i class="fa fa-search"></i></button>
+                    <input class="search-input" type="text" placeholder="Search and hit enter">
+                    <button class="search-button" type="reset"><i class="fa fa-search"></i></button>
                 </form>
                 <div class="bow-text logo">
-                    <img class="logo-bow-text" src="images/logo_bow_text.png">
-                    <img class="logo-mountain" src="images/logo.png">
+                    <img class="bow-text" src="images/logo_bow_text.png">
+                    <img src="images/logo.png">
                     <h class="logo-bold">TRAVELGRAM</h>
                 </div>
-                <a class="subscribe" href="#">SUBSCRIBE</a>
+                <a class="link" href="#">SUBSCRIBE</a>
             </div>
 
-            <div class="header-bottom">
-                <div class="header-nav">
-                    <a href="#">HOME</a>
-                    <a href="#">FEATURES</a>
-                    <a href="#">BLOGS</a>
-                    <a href="#">GALLERY</a>
-                    <a href="#">CATEGORIES</a>
-                    <a href="#">CONTACT</a>
-                </div>
+            <div class="navigation">
+                <nav class="header-nav">
+                    <a class="link" href="#">HOME</a>
+                    <a class="link" href="#">FEATURES</a>
+                    <a class="link" href="#">BLOGS</a>
+                    <a class="link" href="#">GALLERY</a>
+                    <a class="link" href="#">CATEGORIES</a>
+                    <a class="link" href="#">CONTACT</a>
+                </nav>
                 <div class="header-contacts">
-                    <a href="#"><img src="images/contact_facebook.png"></a>
-                    <a href="#"><img src="images/contact_google.png"></a>
-                    <a href="#"><img src="images/contact_twitter.png"></a>
-                    <a href="#"><img src="images/contact_youtube.png"></a>
-                    <a href="#"><img src="images/contact_instagram.png"></a>
+                    <a class="link" href="#"><img src="images/contact_facebook.png"></a>
+                    <a class="link" href="#"><img src="images/contact_google.png"></a>
+                    <a class="link" href="#"><img src="images/contact_twitter.png"></a>
+                    <a class="link" href="#"><img src="images/contact_youtube.png"></a>
+                    <a class="link" href="#"><img src="images/contact_instagram.png"></a>
                 </div>
             </div>
         </header>
-    <body>        
     </body>
 </html>
