Featured is added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <header class="container">
+        <header class="header">
             <div class="header-top">
                 <form class="search">
                     <input class="search-input" type="text" placeholder="Search and hit enter">
@@ -45,5 +45,48 @@
                 </div>
             </div>
         </header>
+
+        <section class="featured">
+            <div class="background">
+                <div class="skew"></div>
+            </div>
+
+            <header class="header">
+                <h>Travelling</h>
+                <br>
+                <div>
+                    <img src="images/travelling_header_path.png">
+                    <p>SPORTS THAT NEVER ENDS</p>
+                </div>
+            </header>
+
+            <article class="article">
+                <h>FEATURED SPORTS</h>
+                <div class="content">
+                    <div class="left">
+                        <button class="arrow-button"></button>
+                        <br>
+                        <button class="arrow-button arrow-button-down"></button>
+                    </div>
+                    <div class="right">
+                        <h>LOST IN SPACE</h>
+                        <p>Some modern factory robots are "autonomous" within the strict confines of their direct environment. It may not be<br>
+                        that every degree of freedom exists</p>
+                        <button class="yellow-button">
+                            Explore now!
+                            <div class="yellow-button-arrow"></div>
+                        </button>
+
+                        <div class="selectors">
+                            <button class="selector"></button>
+                            <button class="selector"></button>
+                            <button class="selector"></button>
+                            <button class="selector"></button>
+                            <button class="selector"></button>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </body>
 </html>
