About section is added some HTML-validator fixex

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta lang="en" charset="utf-8">
+
         <title>TravelGram</title>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
@@ -20,9 +21,9 @@
                     <button class="search-button" type="reset"><i class="fa fa-search"></i></button>
                 </form>
                 <div class="bow-text logo">
-                    <img class="bow-text" src="images/logo_bow_text.png">
-                    <img src="images/logo.png">
-                    <h class="logo-bold">TRAVELGRAM</h>
+                    <img alt="text" class="bow-text" src="images/logo_bow_text.png">
+                    <img alt="logo" src="images/logo.png">
+                    <h1 class="logo-bold">TRAVELGRAM</h1>
                 </div>
                 <a class="link" href="#">SUBSCRIBE</a>
             </div>
@@ -37,11 +38,11 @@
                     <a class="link" href="#">CONTACT</a>
                 </nav>
                 <div class="header-contacts">
-                    <a class="link" href="#"><img src="images/contact_facebook.png"></a>
-                    <a class="link" href="#"><img src="images/contact_google.png"></a>
-                    <a class="link" href="#"><img src="images/contact_twitter.png"></a>
-                    <a class="link" href="#"><img src="images/contact_youtube.png"></a>
-                    <a class="link" href="#"><img src="images/contact_instagram.png"></a>
+                    <a class="link" href="#"><img alt="facebook" src="images/contact_facebook.png"></a>
+                    <a class="link" href="#"><img alt="google" src="images/contact_google.png"></a>
+                    <a class="link" href="#"><img alt="twitter" src="images/contact_twitter.png"></a>
+                    <a class="link" href="#"><img alt="youtube" src="images/contact_youtube.png"></a>
+                    <a class="link" href="#"><img alt="instagram" src="images/contact_instagram.png"></a>
                 </div>
             </div>
         </header>
@@ -55,7 +56,7 @@
                 <h>Travelling</h>
                 <br>
                 <div>
-                    <img src="images/travelling_header_path.png">
+                    <img alt="icon" src="images/travelling_header_path.png">
                     <p>SPORTS THAT NEVER ENDS</p>
                 </div>
             </header>
@@ -74,7 +75,7 @@
                         that every degree of freedom exists</p>
                         <button class="yellow-button">
                             Explore now!
-                            <div class="yellow-button-arrow"></div>
+                            <span class="yellow-button-arrow"></span>
                         </button>
 
                         <div class="selectors">
@@ -88,5 +89,66 @@
                 </div>
             </article>
         </section>
+
+        <section class="about">
+            <div class="about-left">
+                <div class="shadowed-box map-box">
+                    <h>WHERE I AM</h>
+                    <img class="map" src="images/map.png" alt=""> 
+                </div>
+            </div>
+            <table class="about-right">
+                <tr>
+                    <td>
+                        <div class="shadowed-box wide-cell first-cell">
+                            <img src="images/night_life_written_in_stars.png" alt="">
+                            <hr class="thin-line">
+                            <p>A high degree of autonomy is particularly desirable in fields such as space exploration...</p>
+                            <button class="yellow-button">read more</button>
+                            <nav class="share">
+                                <p>SHARE</p>
+                                <a class="link link-facebook" href="#"></a>
+                                <a class="link link-instagram" href="#"></a>
+                                <a class="link link-twitter" href="#"></a>
+                            </nav>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="shadowed-box narrow-cell second-cell">
+                            <div class="background">
+                                <img class="background-image" alt="" src="images/about_right_read_more.png">
+                            </div>
+                            <button class="yellow-button">read more</button>
+                            <p class=""></p>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="shadowed-box narrow-cell third-cell">
+                            <div class="background">
+                                <img class="background-image" alt="" src="images/about_right_road.png">
+                            </div>
+                        </div>
+                    </td>
+
+                    <td>
+                        <div class="shadowed-box wide-cell fourth-cell">
+                            <img src="images/night_life_written_in_stars.png" alt="">
+                            <hr class="thin-line">
+                            <p>A high degree of autonomy is particularly desirable in fields such as space exploration...</p>
+                            <button class="yellow-button">read more</button>
+                            <nav class="share">
+                                <p>SHARE</p>
+                                <a class="link link-facebook" href="#"></a>
+                                <a class="link link-instagram" href="#"></a>
+                                <a class="link link-twitter" href="#"></a>
+                            </nav>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </section>
+
     </body>
 </html>
