About me added + some fixes

--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
                 </div>
             </header>
 
-            <article class="article">
+            <section class="article">
                 <h>FEATURED SPORTS</h>
                 <div class="content">
-                    <div class="left">
+                    <div class="content-left">
                         <button class="arrow-button"></button>
                         <br>
                         <button class="arrow-button arrow-button-down"></button>
                     </div>
-                    <div class="right">
+                    <div class="content-right">
                         <h>LOST IN SPACE</h>
                         <p>Some modern factory robots are "autonomous" within the strict confines of their direct environment. It may not be<br>
                         that every degree of freedom exists</p>
-                        <button class="yellow-button">
+                        <button class="button">
                             Explore now!
-                            <span class="yellow-button-arrow"></span>
+                            <span class="-arrow"></span>
                         </button>
 
                         <div class="selectors">
@@ -87,14 +87,27 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
         </section>
 
         <section class="about">
             <div class="about-left">
                 <div class="shadowed-box map-box">
-                    <h>WHERE I AM</h>
+                    <h1>WHERE I AM</h1>
                     <img class="map" src="images/map.png" alt=""> 
+                </div>
+                <div class="about-me">
+                    <h1 class="">ABOUT ME</h1>
+                    <p class="about-me-text">Hi! I'm a Travellerr  based on Assam 
+                        I love editing photos, clicking photos, creating responsive websites alongwith high quality graphics.</p>
+                    <h1 class="about-me-follow">Follow Me</h1>
+                    <div class="about-me-socials">
+                        <a class="link" href="#"><img alt="facebook" src="images/contact_facebook.png"></a>
+                        <a class="link" href="#"><img alt="google" src="images/contact_google.png"></a>
+                        <a class="link" href="#"><img alt="twitter" src="images/contact_twitter.png"></a>
+                        <a class="link" href="#"><img alt="youtube" src="images/contact_youtube.png"></a>
+                        <a class="link" href="#"><img alt="instagram" src="images/contact_instagram.png"></a>
+                    </div>
                 </div>
             </div>
             <table class="about-right">
@@ -104,7 +117,7 @@
                             <img src="images/night_life_written_in_stars.png" alt="">
                             <hr class="thin-line">
                             <p>A high degree of autonomy is particularly desirable in fields such as space exploration...</p>
-                            <button class="yellow-button">read more</button>
+                            <button class="button">read more</button>
                             <nav class="share">
                                 <p>SHARE</p>
                                 <a class="link link-facebook" href="#"></a>
@@ -118,7 +131,7 @@
                             <div class="background">
                                 <img class="background-image" alt="" src="images/about_right_read_more.png">
                             </div>
-                            <button class="yellow-button">read more</button>
+                            <button class="button">read more</button>
                             <p class=""></p>
                         </div>
                     </td>
@@ -137,7 +150,7 @@
                             <img src="images/night_life_written_in_stars.png" alt="">
                             <hr class="thin-line">
                             <p>A high degree of autonomy is particularly desirable in fields such as space exploration...</p>
-                            <button class="yellow-button">read more</button>
+                            <button class="button">read more</button>
                             <nav class="share">
                                 <p>SHARE</p>
                                 <a class="link link-facebook" href="#"></a>
@@ -149,6 +162,8 @@
                 </tr>
             </table>
         </section>
+
+        <
 
     </body>
 </html>
