Completed CSS and HTML validation (only warnings). Needs some visual fixes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
                         <input class="input" placeholder="Your message">
                     </form>
                 </section>
-
             </div>
 
             <div class="about-right">
@@ -384,7 +383,42 @@
         </section>
 
         <section class="sn-contacts">
-            
+            <a class="link" href="#">Facebook <img alt="facebook" src="images/contact_facebook.png"></a>
+            <a class="link" href="#">Google<img alt="google" src="images/contact_google.png"></a>
+            <a class="link" href="#">Twitter<img alt="twitter" src="images/contact_twitter.png"></a>
+            <a class="link" href="#">Youtube<img alt="youtube" src="images/contact_youtube.png"></a>
+            <a class="link" href="#">Instagram<img alt="instagram" src="images/contact_instagram.png"></a>
         </section>
+
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="logo">
+                    <img alt="text" class="bow-text" src="images/logo_bow_text.png">
+                    <img alt="logo" src="images/logo.png">
+                    <h1 class="logo-bold">TRAVELGRAM</h1>
+                </div>
+            </div>
+
+            <div class="navigation">
+                <nav class="footer-nav">
+                    <a class="link" href="#">HOME</a>
+                    <a class="link" href="#">FEATURES</a>
+                    <a class="link" href="#">BLOGS</a>
+                    <a class="link" href="#">GALLERY</a>
+                    <a class="link" href="#">CATEGORIES</a>
+                    <a class="link" href="#">CONTACT</a>
+                </nav>
+            </div>
+
+            <div class="footer-bottom">
+                <button class="arrow-button">
+                    <img class="left-bottom-path" alt="" src="images/travelling_header_path.png">
+                    <img class="right-bottom-path" alt="" src="images/travelling_header_path.png">
+                </button>
+                <div class="authors">
+                    TravelGram   Designed  By  Navin Chandra Gupta
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
